--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
           token: NOT_NEEDED
           base: ""
           plugin_skyline: yes
+          output_action: gist
+          committer_gist: 9834b4a0e946ad931756b5cb5873ba02
           plugin_skyline_year: 2022
           plugin_skyline_frames: 6
           plugin_skyline_quality: 1
