--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          output_action: gist
-          committer_gist: 9834b4a0e946ad931756b5cb5873ba02
+          committer_branch: assets
       - uses: Platane/snk@v2
         with:
           github_user_name: ${{ github.repository_owner }}
@@ -25,7 +24,6 @@ jobs:
         uses: exuanbo/actions-deploy-gist@v1
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          gist_id: 9834b4a0e946ad931756b5cb5873ba02
           file_path: github-snake.svg
           file_type: binary
       - name: Squash and Commit
@@ -40,8 +38,6 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_skyline: yes
-          output_action: gist
-          committer_gist: 9834b4a0e946ad931756b5cb5873ba02
           plugin_skyline_year: 2023
           plugin_skyline_frames: 6
           plugin_skyline_quality: 1
@@ -57,8 +53,6 @@ jobs:
           filename: metrics.plugin.achievements.compact.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
-          output_action: gist
-          committer_gist: 9834b4a0e946ad931756b5cb5873ba02
           plugin_achievements: yes
           plugin_achievements_only: >-
             polyglot, stargazer, sponsor, deployer, member, maintainer, developer,
@@ -70,7 +64,5 @@ jobs:
           filename: metrics.plugin.people.followers.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
-          output_action: gist
-          committer_gist: 9834b4a0e946ad931756b5cb5873ba02
           plugin_people: yes
           plugin_people_types: followers
