--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,30 +9,10 @@ on:
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          committer_branch: assets
-      - uses: Platane/snk@v2
-        with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: github-snake.svg?palette=github-dark
-          committer_branch: assets
-#       - name: Deploy
-#         uses: exuanbo/actions-deploy-gist@v1
-#         with:
-#           token: ${{ secrets.METRICS_TOKEN }}
-#           file_path: github-snake.svg
-#           file_type: binary
-#           committer_branch: assets
-      - uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.skyline.city.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
           committer_branch: assets
           plugin_skyline: yes
           plugin_skyline_year: 2023
@@ -45,26 +25,32 @@ jobs:
               "wait": 4,
               "hide": ".github-corner, .footer-link, .buttons-options, .mobile-rotate, .display-info span:first-child"
             }
-      - uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.achievements.compact.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
-          committer_branch: assets
+          plugin_notable: yes
           plugin_achievements: yes
-          plugin_achievements_only: >-
-            polyglot, stargazer, sponsor, deployer, member, maintainer, developer,
-            scripter, packager, explorer, infographile, manager
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
-      - uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.people.followers.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
-          committer_branch: assets
+          plugin_achievements_secrets: yes
+          plugin_achievements_limit: 0
           plugin_people: yes
           plugin_people_types: followers
+          config_timezone: Asia/Manila
+          
+  github-contributions-snake:
+    runs-on: ubuntu-latest
+    needs: github-metrics
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: assets
+          fetch-depth: 0
+      - uses: fregante/setup-git-user@v2
+
+      - uses: Platane/snk@v2
+        with:
+          github_user_name: ${{ github.repository_owner }}
+          outputs: github-snake.svg?palette=github-dark
+
       - name: Squash and Commit
         run: |
           git add .
