--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,12 +25,17 @@ jobs:
               "wait": 4,
               "hide": ".github-corner, .footer-link, .buttons-options, .mobile-rotate, .display-info span:first-child"
             }
+          plugin_habits: yes
+          plugin_habits_from: 400
+          plugin_habits_days: 30
+          plugin_habits_facts: yes
           plugin_notable: yes
           plugin_achievements: yes
           plugin_achievements_display: compact
           plugin_achievements_threshold: X
           plugin_achievements_secrets: yes
           plugin_achievements_limit: 0
+          plugin_languages: yes
           plugin_people: yes
           plugin_people_types: followers
           config_timezone: Asia/Manila
