--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           plugin_habits_facts: yes
           plugin_notable: yes
           plugin_achievements: yes
-          plugin_achievements_display: compact
+          plugin_achievements_display: detailed
           plugin_achievements_threshold: X
           plugin_achievements_secrets: yes
           plugin_achievements_limit: 0
