--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           plugin_notable: yes
           plugin_achievements: yes
           plugin_achievements_display: detailed
-          plugin_achievements_threshold: X
+          plugin_achievements_threshold: C
           plugin_achievements_secrets: yes
           plugin_achievements_limit: 0
           plugin_languages: yes
