--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           fetch-depth: 0
       - uses: fregante/setup-git-user@v2
 
-      - uses: Platane/snk@v2
+      - uses: Platane/snk/svg-only@main
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: github-snake.svg?palette=github-dark
